[package]
name = "popup"
version = "0.1.0"
authors = ["Sergey <serridd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.13.0"

[build-dependencies]
windows = "0.13.0"

[lib]
name = "doge"
crate-type = ["cdylib"]